test/src/e2e_vm_tests/test_programs/should_fail/contract_wrong_method_return_type/src/main.sw
contract;

abi MethodTest {
    fn test_fn() -> bool;
}

impl MethodTest for Contract {
    fn test_fn() -> u64 {
        return 1;
    }
}
